--- a/posts/1.6.llm_multimodal.md
+++ b/posts/1.6.llm_multimodal.md
@@ -485,6 +485,20 @@ DALL-E3：
 
 [MetaMorph: Multimodal Understanding and Generation via Instruction Tuning](https://arxiv.org/pdf/2412.14164v1)
 
+
+
+## 多模态推荐系统
+
+[多模态推荐系统新突破，一文读懂前沿进展！](https://mp.weixin.qq.com/s/YDna7dvC55yWL61r8PljoQ)
+
+[Multimodal Recommender Systems: A Survey](https://arxiv.org/pdf/2302.03883)
+
+[https://github.com/Applied-Machine-Learning-Lab/Awesome-Multimodal-Recommender-Systems](https://github.com/Applied-Machine-Learning-Lab/Awesome-Multimodal-Recommender-Systems)
+
+BM3：[Bootstrap Latent Representations for Multi-modal Recommendation](https://arxiv.org/pdf/2207.05969)
+
+EM3：[End-to-end training of Multimodal Model and ranking Model](https://arxiv.org/pdf/2404.06078v1)
+
 ## 其他
 
 (toread)
