--- a/posts/2.recommend.md
+++ b/posts/2.recommend.md
@@ -969,6 +969,13 @@ D2Q 算法的具体做法如下：
 
 [KDD 2024 | 深入理解推荐模型中的辅助排序损失](https://mp.weixin.qq.com/s/Y4ErK09-_TSJ2m6lC6UGCA)
 
+
+## Wukong
+
+[Wukong: Towards a Scaling Law for Large-Scale Recommendation](https://arxiv.org/pdf/2403.02545.pdf)
+
+
+
 # 多目标
 
 ## 多目标+推荐综述
@@ -1010,6 +1017,11 @@ APG: 面向CTR预估的自适应参数生成网络
 [Learned Ranking Function: From Short-term Behavior Predictions to Long-term User Satisfaction](https://www.arxiv.org/pdf/2408.06512)，rank阶段得到多目标的输出，需要把它们融合成一个目标，拿这个去排序，例如加法融合，LRF就是对其中搜参方法的优化
 
 
+## NAR4Rec
+
+[KDD 2024 | 快手生成式推荐](https://mp.weixin.qq.com/s/2Clup2_JPELWBuHqMBc97w)
+
+[Non-autoregressive Generative Models for Reranking Recommendation](https://arxiv.org/pdf/2402.06871)
 
 # item冷启
 
