--- a/posts/1.9.llm_others.md
+++ b/posts/1.9.llm_others.md
@@ -867,6 +867,12 @@ Neel Nanda（deepmind）的项目
 
 [The Language of Motion: Unifying Verbal and Non-verbal Language of 3D Human Motion](https://arxiv.org/abs/2412.10523v1)
 
+## 视觉空间智能
+
+[李飞飞、谢赛宁等探索MLLM「视觉空间智能」，网友：2025有盼头了](https://mp.weixin.qq.com/s/Z4Kv92fukfNTyE1tSpJslA)
+
+[Thinking in Space: How Multimodal Large Language Models See, Remember, and Recall Spaces](https://arxiv.org/pdf/2412.14171v1)
+
 
 # 语音
 
