--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1367,6 +1367,51 @@ $$
 
 [Collaborative Cross-modal Fusion with Large Language Model for Recommendation](https://arxiv.org/pdf/2408.08564)
 
+## Transrec
+
+[Bridging Items and Language: A Transition Paradigm for Large Language Model-Based Recommendation](https://arxiv.org/pdf/2310.06491)
+
+核心思想如下：
+
+![](../assets/trans-rec-instruct-tuning.png)
+
+将一个item表示成3部分：id+title+attr，设计三种对应的instruct-tuning任务，其中```||xx||+```是一个特殊标记，类似于标识任务类型，对应的[代码](https://github.com/Linxyhaha/TransRec/blob/main/scripts/training/reconstruct.py)：
+
+```python
+                if args.target == "id":
+                    source = "Given the following purchase history of a user: " + "; ".join(titles) + ". "
+                    source += "What is the next possible item to be purchased by the user?"
+                    source += " || ID"
+
+                elif args.target == "attribute":
+                    source = "Given the following categories of purchase history of a user: " + "; ".join(titles) + ". "
+                    source += "What is the category of the next possible item to be purchased by the user?"
+                    source += " || attribute"
+
+
+                if "\n" in source:
+                    source = "".join(source.split('\n'))
+                if args.query_mode == "attribute":
+                    targets = ["".join(t.split('\n')) for t in target]
+                if "\n" in target:
+                    target = "".join(target.split('\n'))
+                    
+                if args.target == "id":
+                    target = "|| " + target.strip() + " ##"
+                    yield source + " || +", target
+                    
+                if args.target == "attribute":
+                    for target in targets:
+                        target = "## " + target.strip() + " @@" 
+                        yield source + " || +", target
+```
+
+然后是generation grounding，即引入一个特殊的数据结构（FM-index），并进行constrained beam search，让模型能生成候选集中的id/title/attr，然后再遍历全库候选，看不同facet的相似度（会考虑高热打压），加权融合出一个排序
+
+![](../assets/transrec-generation-grounding.png)
+
++ FM-index：参考[Autoregressive Search Engines: Generating Substrings as Document Identifiers](https://arxiv.org/pdf/2204.10628)：例如一个item可以写成```<IDS> 1023 <IDE> Urban Decay Eyeshadow Palette Naked Heat <AS> Makeup <AE> <AS> Eyes <AE>```，并通过wavelet tree存储，给定开始token（如```<IDS>```或者```<AS>```），可以在$$O(Vlog(V))$$里找出所有可能的后续tokens。代码：[https://github.com/facebookresearch/SEAL](https://github.com/facebookresearch/SEAL)
++ constrained beam search：参考[Autoregressive entity retrieval](https://arxiv.org/pdf/2010.00904)：代码：[https://github.com/facebookresearch/GENRE](https://github.com/facebookresearch/GENRE)，另外，可以发现title是没有bos和eos的，这样在检索/生成title的时候，是可以检索/生成子串的，也就是论文提到的position-free，同样的方法也可以用在instruct tuning阶段。
 
 ## 其他
 
