--- a/posts/1.3.llm_archs.md
+++ b/posts/1.3.llm_archs.md
@@ -632,6 +632,10 @@ Google的大规模稀疏模型设计
 
 ## KVCache
 
+kvcache的原理：[https://zhuanlan.zhihu.com/p/670515231](https://zhuanlan.zhihu.com/p/670515231)
+
+
+
 kvcache的量化：[https://zhuanlan.zhihu.com/p/691537237](https://zhuanlan.zhihu.com/p/691537237)
 
 一些结论：
