--- a/posts/1.3.llm_archs.md
+++ b/posts/1.3.llm_archs.md
@@ -590,6 +590,7 @@ Google的大规模稀疏模型设计
 
 [https://github.com/ray-project/ray/releases/tag/ray-2.4.0](https://github.com/ray-project/ray/releases/tag/ray-2.4.0)
 
+[Data+AI标配：Ray的2024年度总结](https://mp.weixin.qq.com/s/eiucaLEqcPyqoP17cjCr2w)
 
 ## Google的几大LLM加速工具
 
