--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -2324,6 +2324,11 @@ Llama 3的主要亮点：
 
 从bf16量化为fp8
 
++ 推理：对精度要求较高，对数值范围要求偏低，故一般用FP8-E4M3
++ 训练：Gradients通常对精度损失不太敏感，但需要更高的范围(例如clip变小的时候，模型效果会变差，说明grad的range是比较大的)，故一般用FP8-E5M2
+
+![](../assets/fp8.jpeg)
+
 ### LLama-3.1-Minitron
 
 [英伟达玩转剪枝、蒸馏：把Llama 3.1 8B参数减半，性能同尺寸更强](https://mp.weixin.qq.com/s/zxW9EagxGJX-rS5loNLKXw)
