--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1402,64 +1402,11 @@ $$
 
 [https://huggingface.co/DSMI/LLaMA-E#/](https://huggingface.co/DSMI/LLaMA-E#/)
 
-### 设计的任务
-
-![](../assets/llama-e-tasks.png)
-
-+ 广告生成
-
-```shell
-为以下商品创建一个有吸引力的广告：
-复古美学植物草本丝质挂毯墙面装饰
-
-输出：
-获取植物野花挂毯，为您的空间增添宁静氛围，
-也可作为波西米亚风格的礼物。立即购买！
-```
-
-+ query增强的标题重写
-
-```shell
-将以下商品标题自然地与查询 “定制冠军圆领衫” 结合并重写。
-输入：
-定制冠军卫衣（正面和背面），冠军卫衣定制
-输出：
-定制冠军圆领卫衣（前后个性化设计）
-```
-
-+ 商品分类
-
-```shell
-此商品属于哪个类别？
-输入：
-红宝石书架，高书架
-输出：
-家居与生活
-```
-
-+ 购买意图推测
-
-```shell
-根据以下查询，指出用户感兴趣的类别。
-输入：
-周末旅行包
-输出：
-包包与钱包
-```
-
-+ 电商常见问题
-
-```shell
-问题：如何支付广告费用？
-输出：
-广告按点击收费。费用因广告位置和点击次数而异。不超出预算，达到预算上限时广告停止。
-```
-
 ### 整体流程
 
 ![](../assets/llama-e.png)
 
-+ instruction formulating: 为上述任务写300个种子指令
++ instruction formulating: 为图中的任务写300个种子指令
     + seller $$<S>$$：商家，包括商品名、风格、品牌等
     + customer $$<C>$$：
         + explicit feature $$<C_0>$$：用户的历史交互商品
@@ -1487,6 +1434,71 @@ $$
         [/INST] <responses>
         ```
 + instruction tuning: 对self-attention的q、k、v、o参数进行lora
+
+### 设计的任务
+
+![](../assets/llama-e-tasks.png)
+
+示例：
+
+| Task                          | Expanded Instructions                                                                 |
+|-------------------------------|---------------------------------------------------------------------------------------|
+| **Ads Generation**            | Produce an advertisement for the specified product.                                   |
+|                               | Create an advertisement for the specified product.                                   |
+|                               | Produce an advertisement for the product mentioned below.                            |
+|                               | Generate an ad designated for the following product.                                 |
+|                               | Prepare an advertisement for the product provided below.                             |
+| **Query-enhanced Title Rewriting** | Rephrase the subsequent product title along with the query.                      |
+|                               | Revise the subsequent product title alongside the query.                             |
+|                               | Revise the product title below, incorporating the given query.                       |
+|                               | Revise the given product title in combination with the query.                        |
+|                               | Incorporate the following query to rewrite the product title.                        |
+| **Product Classification**    | To which category does the subsequent product belong?                                |
+|                               | Which category of this product belongs?                                              |
+|                               | Identify the category to which the following product belongs.                        |
+|                               | What category does the listed product belong to?                                     |
+|                               | Identify the category of the listed product.                                         |
+| **Purchase Intent Speculation** | Which category does the provided query imply the customer is interested in?         |
+|                               | Based on the following query, which category does it indicate the customer is interested in? |
+|                               | What category is suggested by the following customer query’s apparent interest?      |
+|                               | What category does the given query indicate the customer’s interest in?              |
+|                               | Identify the category that the following query suggests the customer is interested in. |
+| **General E-commerce Q&A**    | How are my orders attributed to Offsite Ads?                                         |
+|                               | Describe the process of attributing my orders to Offsite Ads.                        |
+|                               | Can you explain how my orders are attributed to Offsite Ads?                         |
+|                               | Please elaborate on the process of attributing my orders to Offsite Ads.             |
+|                               | How are my orders linked to Offsite Ads?                                             |
+
+对应的中文：
+
+| 任务                         | 扩展说明                                                                             |
+|------------------------------|-------------------------------------------------------------------------------------|
+| **广告生成**                 | 为指定的产品制作一则广告。                                                           |
+|                              | 为指定的产品创建一则广告。                                                           |
+|                              | 为以下提到的产品制作一则广告。                                                       |
+|                              | 为以下产品生成一则广告。                                                             |
+|                              | 为提供的产品准备一则广告。                                                           |
+| **查询增强的标题重写**        | 根据查询改写后续的产品标题。                                                         |
+|                              | 根据查询修改后续的产品标题。                                                         |
+|                              | 根据提供的查询修改以下的产品标题。                                                   |
+|                              | 将给定的查询与产品标题结合进行修改。                                                 |
+|                              | 使用以下查询重写产品标题。                                                           |
+| **产品分类**                 | 以下产品属于哪个类别？                                                               |
+|                              | 这个产品属于哪个类别？                                                               |
+|                              | 确定以下产品属于哪个类别。                                                           |
+|                              | 列出的产品属于哪个类别？                                                             |
+|                              | 确定列出产品的类别。                                                                 |
+| **购买意图推测**             | 提供的查询暗示用户感兴趣的类别是哪个？                                               |
+|                              | 根据以下查询，用户可能感兴趣的类别是什么？                                           |
+|                              | 以下用户查询暗示的兴趣类别是什么？                                                   |
+|                              | 给定的查询表明用户感兴趣的类别是什么？                                               |
+|                              | 确定以下查询暗示用户感兴趣的类别。                                                   |
+| **通用电商问答**             | 我的订单是如何归因到站外广告的？                                                     |
+|                              | 描述我的订单归因到站外广告的过程。                                                   |
+|                              | 你能解释一下我的订单是如何归因到站外广告的吗？                                       |
+|                              | 请详细说明我的订单归因到站外广告的过程。                                             |
+|                              | 我的订单是如何与站外广告关联的？                                                     |
+
 
 
 ## EcomGPT（学术界）
