--- a/posts/1.6.llm_multimodal.md
+++ b/posts/1.6.llm_multimodal.md
@@ -499,6 +499,8 @@ BM3：[Bootstrap Latent Representations for Multi-modal Recommendation](https://
 
 EM3：[End-to-end training of Multimodal Model and ranking Model](https://arxiv.org/pdf/2404.06078v1)
 
+[Multimodal Pretraining, Adaptation, and Generation for Recommendation: A Survey](https://arxiv.org/pdf/2404.00621).. KDD24
+
 ## 其他
 
 (toread)
