--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -57,6 +57,7 @@ CRM(conventional recommendation models)
 
 + [GReaT](https://arxiv.org/pdf/2210.06280)：把表格化（tabular）数据转成自然语言，然后打乱顺序，自回归地finetune一个LLM，再拿tune完的LLM来合成（synthesize）逼真的（realistic）表格化数据
 + [ONCE](https://arxiv.org/pdf/2305.06566)：闭源LLM输出文本（user profiler、content summarizer、personalized content generator），给开源LLM得到user表示，item过开源LLM得到item表示，二者内积学ctr
++ [Agent4Rec](https://arxiv.org/pdf/2310.10108.pdf)：先训一个推荐模型，然后构建一个多智能体系统，模拟和这个推荐模型交互，产出新的样本给推荐模型做数据增强
 
 
 ### where-LLM as feature encoder
@@ -109,22 +110,6 @@ SIGIR2023 \| ID vs 模态: 推荐系统ID范式有望被颠覆？
 [https://github.com/westlake-repl/IDvs.MoRec](https://github.com/westlake-repl/IDvs.MoRec)
 
 [对应的ppt](https://github.com/westlake-repl/MicroLens/blob/master/MicroLens_DeepMind_Talk.pdf)
-
-
-## 多智能体+推荐
-
-### agent4rec
-
-[On Generative Agents in Recommendation](https://arxiv.org/pdf/2310.10108.pdf)
-
-word版的笔记：[https://github.com/daiwk/collections/blob/master/assets/multi-agents.docx](https://github.com/daiwk/collections/blob/master/assets/multi-agents.docx)
-
-[https://github.com/LehengTHU/Agent4Rec](https://github.com/LehengTHU/Agent4Rec)
-
-### MACRec
-
-[MACRec: a Multi-Agent Collaboration Framework for Recommendation](https://arxiv.org/pdf/2402.15235)
-
 
 
 ## 推荐生态系统
@@ -1589,6 +1574,8 @@ sample：
 
 [ONCE: Boosting Content-based Recommendation with Both Open- and Closed-source Large Language Models](https://arxiv.org/pdf/2305.06566)
 
+WSDM24
+
 ![](../assets/once.png)
 
 + GENRE(generative recommendation)：闭源LLM产出数据
@@ -1606,6 +1593,47 @@ sample：
 其中GENRE的3种数据如下：
 
 ![](../assets/once-genre.png)
+
+## Agent4Rec（学术界）
+
+[On Generative Agents in Recommendation](https://arxiv.org/pdf/2310.10108.pdf) SIGIR24
+
+[https://github.com/LehengTHU/Agent4Rec](https://github.com/LehengTHU/Agent4Rec)
+
+核心代码是[https://github.com/LehengTHU/Agent4Rec/blob/master/simulation/avatar.py](https://github.com/LehengTHU/Agent4Rec/blob/master/simulation/avatar.py)，可以发现是用了langchain，包括其中的memory(请求openai的emb接口，本地faiss存)。
+
+1000个真实用户，初始化1000个agent，3个数据集，搞了3000个agent，Agent模拟人的行为，点击、翻页、退出、打分、评价，评价标准：是否真的拟人
+
+整体流程：
+
++ 先在公开数据集上训一个推荐模型（mf/lightgcn等）
++ 构建1000个agent，模拟和这个推荐模型交互，生成一些新的样本（假设推荐了xxx，你是不是会点？点了，正样本，没点负样本之类的）
++ 加上这些新的样本再去重训推荐模型，发现效果有提升
+
+![](../assets/agent4rec.png)
+
+3个module：
+
++ Profile module:
+    + 电影profile（流行度等+电影信息丢给gpt4产出的summary）
+    + 用户profile（社交属性、活跃度、从众心理（conformity）、diversity(更喜欢探索还是利用)、用户喜好tastes（用户历史行为丢给gpt4，让它总结用户喜欢什么不喜欢什么，会在用户有新行为后再update一下））
++ memory module:
+    + factual memory: 过去看了哪些电影、动作是什么
+        + emotional memory: 看完后的情绪表达
++ action module:
+    + 看/打分/反馈
+    + 满意度
+    + 翻页/退出
+
+图中的推荐系统是一个现成的系统/算法，例如MF、lightgcn等
+
+word版的笔记：[https://github.com/daiwk/collections/blob/master/assets/multi-agents.docx](https://github.com/daiwk/collections/blob/master/assets/multi-agents.docx)
+
+
+类似的另一个：
+
+[MACRec: a Multi-Agent Collaboration Framework for Recommendation](https://arxiv.org/pdf/2402.15235)
+
 
 
 ## CCF-LLM（学术界）
@@ -1625,32 +1653,34 @@ sample：
 将一个item表示成3部分：id+title+attr，设计三种对应的instruct-tuning任务，其中```||xx||+```是一个特殊标记，类似于标识任务类型，对应的[代码](https://github.com/Linxyhaha/TransRec/blob/main/scripts/training/reconstruct.py)：
 
 ```python
-                if args.target == "id":
-                    source = "Given the following purchase history of a user: " + "; ".join(titles) + ". "
-                    source += "What is the next possible item to be purchased by the user?"
-                    source += " || ID"
+if args.target == "id":
+    source = "Given the following purchase history of a user: " 
+        + "; ".join(titles) + ". "
+    source += "What is the next possible item to be purchased by the user?"
+    source += " || ID"
 
-                elif args.target == "attribute":
-                    source = "Given the following categories of purchase history of a user: " + "; ".join(titles) + ". "
-                    source += "What is the category of the next possible item to be purchased by the user?"
-                    source += " || attribute"
+elif args.target == "attribute":
+    source = "Given the following categories of purchase history of a user: "
+         + "; ".join(titles) + ". "
+    source += "What is the category of the next possible item to be purchased by the user?"
+    source += " || attribute"
 
 
-                if "\n" in source:
-                    source = "".join(source.split('\n'))
-                if args.query_mode == "attribute":
-                    targets = ["".join(t.split('\n')) for t in target]
-                if "\n" in target:
-                    target = "".join(target.split('\n'))
-                    
-                if args.target == "id":
-                    target = "|| " + target.strip() + " ##"
-                    yield source + " || +", target
-                    
-                if args.target == "attribute":
-                    for target in targets:
-                        target = "## " + target.strip() + " @@" 
-                        yield source + " || +", target
+if "\n" in source:
+    source = "".join(source.split('\n'))
+if args.query_mode == "attribute":
+    targets = ["".join(t.split('\n')) for t in target]
+if "\n" in target:
+    target = "".join(target.split('\n'))
+    
+if args.target == "id":
+    target = "|| " + target.strip() + " ##"
+    yield source + " || +", target
+    
+if args.target == "attribute":
+    for target in targets:
+        target = "## " + target.strip() + " @@" 
+        yield source + " || +", target
 ```
 
 然后是generation grounding，即引入一个特殊的数据结构（FM-index），并进行constrained beam search，让模型能生成候选集中的id/title/attr，然后再遍历全库候选，看不同facet的相似度（会考虑高热打压），加权融合出一个排序
@@ -1723,6 +1753,7 @@ meta发的[LLM-Rec: Personalized Recommendation via Prompting Large Language Mod
 | [LLaMA-E](https://arxiv.org/pdf/2308.04913)| gpt扩展instruct| instruction formulating为写300个种子指令，让gpt作为teacher，对300个种子指令进行扩展，并由领域专家评估后，去重并保证质量，得到120k个指令作为训练集，再用lora去instruct tuning|lora|
 | [EcomGPT](https://arxiv.org/pdf/2308.06966v1)| 一系列电商任务FFT BLOOMZ | 设置一系列的task(100多个task)来finetune BLOOMZ，包括命名实体识别、描述生成、对话intent提取等|FFT|
 | [ONCE](https://arxiv.org/pdf/2305.06566)| 闭源LLM总结、开源LLM做encoder，u-i学ctr |闭源LLM输出文本（user profiler、content summarizer、personalized content generator），给开源LLM得到user表示，item过开源LLM得到item表示，二者内积学ctr| lora训开源，frozen闭源|
+|[Agent4Rec](https://arxiv.org/pdf/2310.10108.pdf)|多智能体系统模拟交互，产出推荐样本| 先训一个推荐模型，然后构建一个多智能体系统，模拟和这个推荐模型交互，产出新的样本给推荐模型做数据增强 |仅训推荐模型，LLM frozen|
 |[TransRec](https://arxiv.org/pdf/2310.06491) | 受限生成 | - 将一个item表示成3部分：id+title+attr，设计三种对应的instruct-tuning任务；<br> - 引入一个特殊的数据结构（FM-index），并进行constrained beam search，让模型能生成候选集中的id/title/attr，<br> 再遍历全库候选，看不同facet的相似度（会考虑高热打压），加权融合出一个排序| lora|
 
 
